--- a/src/index.html
+++ b/src/index.html
@@ -28,29 +28,66 @@
 
 
 
-    <div class="card">
+    <div class="card container">
       <div class="card-wrapper">
         <div class="card__header">
+
+          <h2 class="card__heading">
+            <span class="card__heading-digit">100k</span>
+            <span class="card__heading-text">Pageviews</span>
+
+          </h2>
           
-          <h2 class="card__heading">Pageviews</h2>
-          <input type="range" class="card__slider" min="0" max="36">
-          <p class="card__price"> 
-            <span class="card__price-digit">16</span>/month
+          <div class="card__slider">
+            <input type="range" class="card__slider-value" min="0" max="36" value="16">
+            <span class="card__slider-bar">
+              <span class="card__slider-bar-inner"></span>
+            </span>
+          </div>
+
+          <p class="card__pricing"> 
+            <span class="card__pricing-digit">$16.00</span>/
+            <span class="card__pricing-interval">month</span>
           </p>
         </div>
 
-        <div class="card__body"></div>
+        <!-- user can't be missled that she submits data-->
+        <div class="card__body">
+          <fieldset class="card__toggle">
+            <label for="monthlyBiling" class="card__toggle-title card__toggle-title--left">
+              Monthly Billing
+            </label>
+            <span class="card__toggle-wrapper">
+              <input class="card__toggle-input" 
+                      type="radio" 
+                      name="purchse-plan" 
+                      id="monthlyBiling" 
+                      draggable="false"
+                      checked>
+              <input class="card__toggle-input" 
+                      type="radio" 
+                      name="purchse-plan" 
+                      draggable="false"
+                      id="yearlyBilling">
+              <span class="card__toggle-background"></span>
+              <span class="card__toggle-switch"></span>
+            </span>
+            <label for="yearlyBilling" class="card__toggle-title card__toggle-title--right">
+              Yearly Billing 
+            </label>
+            <span class="card__toggle-discount--mobile card__toggle-discount" >-25%</span>
+            <span class="card__toggle-discount--desktop card__toggle-discount">25% discount</span>
+          </fieldset>
+        </div>
+
         <div class="card__footer"></div>
       </div>
     </div>
   </main>
 
   <!-- 
-
   $ /month
 
-  Monthly Billing
-  Yearly Billing 25% discount
 
   Unlimited websites
   100% data ownership
